<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/vip"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/vip"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/vipEdit"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:hint="输入会员名称"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/vip"
        />
    <TextView
        android:id="@+id/tel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/tel"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vip" />
    <EditText
        android:id="@+id/telEdit"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:hint="输入联系电话"
        android:textSize="20sp"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/vipEdit"
        app:layout_constraintStart_toEndOf="@id/tel"
        />
    <TextView
        android:id="@+id/birthday"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/birthday"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tel" />
    <EditText
        android:id="@+id/birthdayEdit"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:hint="1973/08/29"
        android:textSize="20sp"
        android:inputType="datetime"
        app:layout_constraintTop_toBottomOf="@id/telEdit"
        app:layout_constraintStart_toEndOf="@id/birthday"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthday" />
    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:hint="输入正确的电子邮件地址"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/birthdayEdit"
        app:layout_constraintStart_toEndOf="@id/email"
        />
    <TextView
        android:id="@+id/sex"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/sex"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />
    <RadioGroup
        android:id="@+id/group"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/emailEdit"
        app:layout_constraintStart_toEndOf="@id/sex"
        >
        <RadioButton
            android:id="@+id/man"
            android:checked="true"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="男"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/female"
            android:checked="false"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="女"
            android:textSize="20sp"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/address"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/address"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sex" />
    <Spinner
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/addressSpinner"
        android:entries="@array/addressArray"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/group"
        app:layout_constraintStart_toEndOf="@id/address"
        />
    <TextView
        android:id="@+id/habitOpen"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/habitOpen"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />
    <ToggleButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:id="@+id/habitOpenToggle"
        android:textOff=""
        android:textOn=""
        android:checked="false"
        android:background="@drawable/selector"
        app:layout_constraintTop_toBottomOf="@id/addressSpinner"
        app:layout_constraintStart_toEndOf="@id/habitOpen"
        />
    <TextView
        android:id="@+id/habit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/habit"
        android:visibility="gone"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/habitOpen" />
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/swimCheck"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/swim"
        android:visibility="gone"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/habitOpenToggle"
        app:layout_constraintStart_toEndOf="@id/habit"
        />
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/gymCheck"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/gym"
        android:visibility="gone"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/habitOpenToggle"
        app:layout_constraintStart_toEndOf="@id/swimCheck"
        />
    <TextView
        android:id="@+id/area"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/area"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/habit" />
    <AutoCompleteTextView
        android:id="@+id/areaText"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:hint="输入所在区域"
        android:dropDownAnchor="@id/emailEdit"
        app:layout_constraintTop_toBottomOf="@id/swimCheck"
        app:layout_constraintStart_toEndOf="@id/area"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="点击"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/bt_shape"
        android:onClick="btnClick"
        app:layout_constraintTop_toBottomOf="@+id/areaText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>